# sherpa

./: .gitignore  .mcp.json  CLAUDE.md  gemini-share-6b0ff7c69440.md  gemini_share_to_md.py  main.py  pyproject.toml
cli/: pyproject.toml  sherpa_cli.py
docs/: SHERPA_STANDARDS.md  bootstrap-prompt.md  implementation-plan.md  prd.md
sherpa/: indexer.py  server.py
tools/: ask_ai.py  client_db.py  image_edit.py  image_gen.py  jira_admin.py  jira_issues.py  jira_pulse.py  knowledge.py  lumbergh.py  notes_search.py  notify.py  reindex.py  sentry_issues.py  slack_messenger.py  slack_pomodoro.py  unsplash_search.py  vault_manager.py  web_read.py  web_search.py
workflows/: investigate_sentry_error.yaml
