[project]
name = "sherpa-cli"
version = "0.1.0"
description = "CLI dispatcher for Sherpa tools (calls uv run --script under the hood)"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
sherpa = "sherpa_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["sherpa_cli.py"]

[tool.hatch.build.targets.sdist]
only-include = ["sherpa_cli.py"]
